# duplocloud

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: app.py
src/client/: package-lock.json  package.json
src/client/public/: index.html
src/client/src/: App.css  App.tsx  index.css  index.tsx
src/client/src/Components/Chatbot/: Chatbot.css  Chatbot.tsx
src/client/src/Components/Conversation/: Conversation.css  Conversation.tsx
src/client/src/Domain/Models/: ConversationProps.ts  Message.ts
src/client/src/Domain/Services/: User.ts
src/domain/models/: action_base.py  chat_message.py
src/domain/repositories/: chroma_repository.py
src/domain/services/llms/: langchain_openai.py  openai.py  prompt_guard.py
src/domain/services/message_router/: router.py
src/features/ask_llm/: openai.py
src/features/message_router/: router.py
src/intents/: ask_llm_intent.py  error_intent.py  message_classifier.py  new_conversation.py  rag_intent.py
